# AlienS-App

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
config/: default_setup_config.xml  settings.xml
data/config/: setup_config.xml
src/: main.cpp
src/app/: account_manager.cpp  account_manager.h  app.cpp  app.hpp  course_manager.cpp  course_manger.h  interface.cpp  interface.hpp  settings_manager.cpp  settings_manager.h  user_interface.cpp  user_interface.hpp
src/modules/: account_manager.cpp  account_manager.hpp  code_exec_manager.hpp  course_manager.cpp  course_manger.hpp  settings_manager.cpp
src/ui_html/: account.html  main-menu.html  main.html  open-course.html  settings.html
